--- a/thankyou.html
+++ b/thankyou.html
@@ -108,7 +108,7 @@ footer {
 </header>
 
 <main>
-  <img src="checkmark.png" alt="Success">
+  <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/42/Checkmark.svg/1024px-Checkmark.svg.png" alt="Success">
   <h2>Thank You!</h2>
   <p>Your message has been successfully sent. Our team will get back to you soon to help you start your European journey with confidence.</p>
   <a href="index.html">← Back to Home</a>
