--- a/index.html
+++ b/index.html
@@ -210,7 +210,9 @@ footer {
   <div class="hero-content">
     <h2>Advance with Confidence.<br>Arrive in Style.</h2>
     <p>Your luxury pathway to verified European work and travel opportunities.</p>
-    <button>Apply for Your Job</button>
+    <button onclick="window.location.href='apply.html?job=warehouse-assistant'">
+  Apply for Your Job
+</button>
   </div>
 </section>
 
