--- a/jobs.html
+++ b/jobs.html
@@ -60,6 +60,7 @@ h2 {
   border-radius: 12px;
   padding: 25px;
   box-shadow: 0 0 10px rgba(212,175,55,0.1);
+  cursor: pointer;
   transition: all 0.3s ease;
 }
 .job-card:hover {
@@ -80,7 +81,37 @@ h2 {
   font-style: italic;
   margin: 10px 0;
 }
-.apply-btn {
+
+/* Modal */
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 999;
+  inset: 0;
+  background: rgba(0,0,0,0.85);
+  justify-content: center;
+  align-items: center;
+  padding: 20px;
+}
+.modal-content {
+  background: #0b0b0b;
+  border: 1px solid rgba(212,175,55,0.3);
+  border-radius: 12px;
+  max-width: 500px;
+  width: 100%;
+  padding: 25px;
+  text-align: center;
+  position: relative;
+}
+.modal-content h3 {
+  color: var(--gold);
+  margin-bottom: 10px;
+}
+.modal-content p {
+  color: #ccc;
+  margin-bottom: 15px;
+}
+.modal-content .apply-btn {
   display: inline-block;
   background: var(--gold);
   color: #000;
@@ -90,8 +121,16 @@ h2 {
   font-weight: 600;
   transition: 0.3s;
 }
-.apply-btn:hover {
+.modal-content .apply-btn:hover {
   background: #f1d675;
+}
+.modal-close {
+  position: absolute;
+  top: 12px;
+  right: 15px;
+  font-size: 22px;
+  color: var(--gold);
+  cursor: pointer;
 }
 
 footer {
@@ -117,56 +156,77 @@ footer {
 </header>
 
 <main>
-  <h2>Current Job Openings in Europe 🇪🇺</h2>
+  <h2>Popular Job Categories in Europe 🇪🇺</h2>
 
   <div class="jobs-grid">
-    <div class="job-card">
-      <h3>🏨 Hotel Receptionist</h3>
-      <p class="location">Location: Berlin, Germany</p>
-      <p>Join a 5-star luxury hotel as a front-desk receptionist. Great communication skills and English proficiency required. Accommodation provided.</p>
-      <a href="apply.html?job=receptionist" class="apply-btn">Apply Now</a>
+    <div class="job-card" data-job="Caterers" data-location="Multiple countries" data-desc="Prepare, cook, and serve meals in hotels, restaurants, or events. Free accommodation provided." data-salary="€1,200 – €1,800/month">
+      🍴 Caterers
     </div>
-
-    <div class="job-card">
-      <h3>🍽️ Restaurant Waiter / Waitress</h3>
-      <p class="location">Location: Rome, Italy</p>
-      <p>Assist guests with a smile in high-end restaurants. Experience in customer service preferred. Visa sponsorship available.</p>
-      <a href="apply.html?job=waiter" class="apply-btn">Apply Now</a>
+    <div class="job-card" data-job="Bar Staff" data-location="Multiple countries" data-desc="Serve drinks, interact with customers, and maintain bar cleanliness. Free accommodation provided." data-salary="€1,100 – €1,500/month">
+      🍹 Bar Staff
     </div>
-
-    <div class="job-card">
-      <h3>🏭 Factory Worker</h3>
-      <p class="location">Location: Warsaw, Poland</p>
-      <p>Work with a leading electronics production company. No experience needed — training provided. Accommodation included.</p>
-      <a href="apply.html?job=factory" class="apply-btn">Apply Now</a>
+    <div class="job-card" data-job="Factory Workers" data-location="Poland, Germany" data-desc="Work in production lines, assembling products or managing machinery. Free accommodation provided." data-salary="€1,000 – €1,400/month">
+      🏭 Factory Workers
     </div>
-
-    <div class="job-card">
-      <h3>👷 Construction Assistant</h3>
-      <p class="location">Location: Amsterdam, Netherlands</p>
-      <p>Assist engineers and foremen on various sites. Safety gear and housing included. Must be physically fit and reliable.</p>
-      <a href="apply.html?job=construction" class="apply-btn">Apply Now</a>
+    <div class="job-card" data-job="Farmers" data-location="Netherlands, Germany" data-desc="Assist in planting, harvesting, and maintaining crops or livestock. Free accommodation provided." data-salary="€1,000 – €1,300/month">
+      🌾 Farmers
     </div>
-
-    <div class="job-card">
-      <h3>🧹 Housekeeping Staff</h3>
-      <p class="location">Location: Paris, France</p>
-      <p>Join a 4-star hotel as a room attendant. Responsible for maintaining rooms and common areas. Meals and lodging covered.</p>
-      <a href="apply.html?job=housekeeping" class="apply-btn">Apply Now</a>
+    <div class="job-card" data-job="Plumbers" data-location="Germany, Austria" data-desc="Install, repair, and maintain piping systems in residential or commercial properties. Free accommodation provided." data-salary="€1,400 – €2,000/month">
+      🚧 Plumbers
     </div>
-
-    <div class="job-card">
-      <h3>👩‍⚕️ Healthcare Assistant</h3>
-      <p class="location">Location: Dublin, Ireland</p>
-      <p>Provide care and support to elderly and disabled clients in care homes. Must have basic first aid skills.</p>
-      <a href="apply.html?job=healthcare" class="apply-btn">Apply Now</a>
+    <div class="job-card" data-job="Constructors" data-location="Netherlands, Belgium" data-desc="Work on construction sites, operate machinery, or manage building projects. Free accommodation provided." data-salary="€1,500 – €2,200/month">
+      🏗️ Constructors
+    </div>
+    <div class="job-card" data-job="Drivers" data-location="Germany, France" data-desc="Drive vehicles for delivery, transport, or logistics. Free accommodation provided." data-salary="€1,200 – €1,800/month">
+      🚗 Drivers
     </div>
   </div>
 </main>
 
+<!-- Modal -->
+<div class="modal" id="jobModal">
+  <div class="modal-content">
+    <span class="modal-close" id="modalClose">&times;</span>
+    <h3 id="modalJobTitle"></h3>
+    <p id="modalLocation"></p>
+    <p id="modalDescription"></p>
+    <p id="modalSalary"></p>
+    <a href="#" id="modalApplyBtn" class="apply-btn">Apply Now</a>
+  </div>
+</div>
+
 <footer>
   © <script>document.write(new Date().getFullYear())</script> EuroVantage — Accra, Ghana. All rights reserved.
 </footer>
+
+<script>
+// Modal functionality
+const modal = document.getElementById('jobModal');
+const modalClose = document.getElementById('modalClose');
+const modalJobTitle = document.getElementById('modalJobTitle');
+const modalLocation = document.getElementById('modalLocation');
+const modalDescription = document.getElementById('modalDescription');
+const modalSalary = document.getElementById('modalSalary');
+const modalApplyBtn = document.getElementById('modalApplyBtn');
+
+document.querySelectorAll('.job-card').forEach(card => {
+  card.addEventListener('click', () => {
+    const job = card.getAttribute('data-job');
+    const location = card.getAttribute('data-location');
+    const desc = card.getAttribute('data-desc');
+    const salary = card.getAttribute('data-salary');
+    modalJobTitle.textContent = job;
+    modalLocation.textContent = "Location: " + location;
+    modalDescription.textContent = desc;
+    modalSalary.textContent = "Salary: " + salary;
+    modalApplyBtn.href = `apply.html?job=${job.toLowerCase().replace(/ /g,'-')}`;
+    modal.style.display = 'flex';
+  });
+});
+
+modalClose.addEventListener('click', () => modal.style.display = 'none');
+window.addEventListener('click', e => { if(e.target == modal) modal.style.display = 'none'; });
+</script>
 
 </body>
 </html>
