--- a/contact.html
+++ b/contact.html
@@ -127,6 +127,23 @@ footer {
   color: #aaa;
   margin-top: 40px;
 }
+
+/* WhatsApp Button */
+.whatsapp-btn {
+  display: inline-block;
+  background: #25D366;
+  color: white;
+  padding: 12px 20px;
+  border-radius: 8px;
+  text-decoration: none;
+  font-weight: 600;
+  text-align: center;
+  margin-top: 10px;
+  transition: 0.3s;
+}
+.whatsapp-btn:hover {
+  background: #1eb45e;
+}
 </style>
 </head>
 <body>
@@ -150,13 +167,16 @@ footer {
       <p>Accra, Ghana</p>
 
       <h3>📞 Call / WhatsApp</h3>
-      <p><a href="https://wa.me/233539121847">+233 539 121 847</a></p>
+      <p><a href="https://wa.me/233539121847" target="_blank">Chat on WhatsApp: +233 539 121 847</a></p>
 
       <h3>✉️ Email</h3>
       <p><a href="mailto:info@eurovantage.com">info@eurovantage.com</a></p>
 
       <h3>🕐 Office Hours</h3>
       <p>Monday – Saturday: 9:00 AM – 5:00 PM</p>
+
+      <!-- WhatsApp Button -->
+      <a class="whatsapp-btn" href="https://wa.me/233539121847?text=Hello%20EuroVantage!%20I%27d%20like%20to%20make%20an%20inquiry." target="_blank">💬 Chat with us on WhatsApp</a>
     </div>
 
     <form id="contactForm">
