--- a/index.html
+++ b/index.html
@@ -4,7 +4,48 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>EuroVantage — Advance with Confidence. Arrive in Style.</title>
+
+<!-- ✅ SEO Meta -->
+<meta name="title" content="EuroVantage — Advance with Confidence. Arrive in Style.">
 <meta name="description" content="EuroVantage connects skilled professionals with verified European work and travel opportunities. Advance your career with confidence and arrive in style.">
+<meta name="keywords" content="EuroVantage, European jobs, work abroad, visa support, travel agency, Ghana jobs, recruitment Europe, job placement, overseas work">
+
+<!-- ✅ Open Graph -->
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://www.eurovantage.com/">
+<meta property="og:title" content="EuroVantage — Advance with Confidence. Arrive in Style.">
+<meta property="og:description" content="Your trusted pathway to verified European jobs and visa support. Start your international career today.">
+<meta property="og:image" content="https://www.eurovantage.com/images/eurovantage-hero.jpg">
+
+<!-- ✅ Twitter -->
+<meta property="twitter:card" content="summary_large_image">
+<meta property="twitter:title" content="EuroVantage — Advance with Confidence. Arrive in Style.">
+<meta property="twitter:description" content="Find verified European jobs with EuroVantage — trusted visa and work support agency.">
+<meta property="twitter:image" content="https://www.eurovantage.com/images/eurovantage-hero.jpg">
+
+<!-- ✅ Schema -->
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Organization",
+  "name": "EuroVantage",
+  "url": "https://www.eurovantage.com",
+  "logo": "https://www.eurovantage.com/favicon.png",
+  "contactPoint": [{
+    "@type": "ContactPoint",
+    "telephone": "+233539121847",
+    "contactType": "Customer Service",
+    "areaServed": "GH",
+    "availableLanguage": ["English"]
+  }],
+  "sameAs": [
+    "https://www.facebook.com/EuroVantage",
+    "https://www.instagram.com/EuroVantage",
+    "https://wa.me/233539121847"
+  ]
+}
+</script>
+
 <link rel="icon" href="favicon.png">
 <style>
 :root {
@@ -42,7 +83,7 @@ nav a:hover { color: var(--gold); }
 
 /* Hero */
 .hero {
-  background: url("hero.jpg") center/cover no-repeat;
+  background: url("images/eurovantage-hero.jpg") center/cover no-repeat;
   color: var(--text-light);
   text-align: center;
   padding: 150px 20px;
@@ -119,7 +160,7 @@ nav a:hover { color: var(--gold); }
   font-size: 16px;
 }
 
-/* Job Section */
+/* Jobs */
 .jobs {
   text-align: center;
   padding: 60px 20px;
@@ -184,7 +225,30 @@ nav a:hover { color: var(--gold); }
   color: var(--gold);
 }
 
-/* Footer */
+/* WhatsApp Floating Button */
+.whatsapp-float {
+  position: fixed;
+  width: 60px;
+  height: 60px;
+  bottom: 25px;
+  right: 25px;
+  background-color: #25d366;
+  color: #fff;
+  border-radius: 50%;
+  text-align: center;
+  font-size: 35px;
+  box-shadow: 0 0 10px rgba(0,0,0,0.3);
+  z-index: 999;
+  transition: 0.3s;
+}
+.whatsapp-float:hover {
+  background-color: #1ebd5a;
+  transform: scale(1.1);
+}
+.whatsapp-float i {
+  margin-top: 12px;
+}
+
 footer {
   text-align: center;
   padding: 25px;
@@ -210,25 +274,23 @@ footer {
   <div class="hero-content">
     <h2>Advance with Confidence.<br>Arrive in Style.</h2>
     <p>Your luxury pathway to verified European work and travel opportunities.</p>
-    <button onclick="window.location.href='apply.html?job=warehouse-assistant'">
-  Apply for Your Job
-</button>
+    <button onclick="window.location.href='apply.html?job=warehouse-assistant'">Apply for Your Job</button>
   </div>
 </section>
 
-<!-- Team / Clients Helped -->
+<!-- ✅ Team Section -->
 <section class="team">
   <h3>People We’ve Helped Secure European Jobs</h3>
   <div class="team-grid">
-    <div class="team-member"><img src="team1.jpg" alt=""><h4>Kwame - Hotel Staff</h4></div>
-    <div class="team-member"><img src="team2.jpg" alt=""><h4>Sarah - Caregiver</h4></div>
-    <div class="team-member"><img src="team3.jpg" alt=""><h4>Lucas - Construction Worker</h4></div>
-    <div class="team-member"><img src="team4.jpg" alt=""><h4>Amira - Factory Supervisor</h4></div>
-    <div class="team-member"><img src="team5.jpg" alt=""><h4>David - Chef Assistant</h4></div>
-    <div class="team-member"><img src="team6.jpg" alt=""><h4>Helena - Hotel Front Desk</h4></div>
+    <div class="team-member"><img src="images/team-kwame-hotel.jpg" alt="Kwame working as hotel staff in Germany"><h4>Kwame - Hotel Staff</h4></div>
+    <div class="team-member"><img src="images/team-sarah-caregiver.jpg" alt="Sarah working as a caregiver in the UK"><h4>Sarah - Caregiver</h4></div>
+    <div class="team-member"><img src="images/team-lucas-builder.jpg" alt="Lucas working as a construction worker in Italy"><h4>Lucas - Construction Worker</h4></div>
+    <div class="team-member"><img src="images/team-amira-factory.jpg" alt="Amira supervising a factory in Poland"><h4>Amira - Factory Supervisor</h4></div>
+    <div class="team-member"><img src="images/team-david-chef.jpg" alt="David working as a chef assistant in France"><h4>David - Chef Assistant</h4></div>
   </div>
 </section>
 
+<!-- ✅ Job Categories -->
 <section class="jobs">
   <h3>Popular Job Categories</h3>
   <div class="job-grid">
@@ -242,27 +304,30 @@ footer {
   </div>
 </section>
 
+<!-- ✅ Testimonials -->
 <section class="testimonials">
   <h3>What Our Clients Say</h3>
   <div class="testimonial-grid">
-    <div class="testimonial"><img src="person1.jpg"><p>“EuroVantage made my job move to Europe so smooth and professional. Highly recommend!”</p><h4>Samuel 🇬🇭</h4></div>
-    <div class="testimonial"><img src="person2.jpg"><p>“Within 3 weeks I got my verified job offer and full visa support. Thank you EuroVantage!”</p><h4>Elena 🇪🇸</h4></div>
-    <div class="testimonial"><img src="person3.jpg"><p>“From interviews to travel, they guided me step-by-step. I’m now working in Europe!”</p><h4>Kwesi 🇬🇭</h4></div>
-    <div class="testimonial"><img src="person4.jpg"><p>“Honest agency — they delivered exactly what they promised.”</p><h4>Linda 🇳🇬</h4></div>
-    <div class="testimonial"><img src="person5.jpg"><p>“Fast process, clear communication, and genuine results.”</p><h4>Marco 🇮🇹</h4></div>
-    <div class="testimonial"><img src="person6.jpg"><p>“I never thought getting a European job could be this easy.”</p><h4>Grace 🇰🇪</h4></div>
-    <div class="testimonial"><img src="person7.jpg"><p>“Everything was handled professionally from start to finish.”</p><h4>Peter 🇫🇷</h4></div>
-    <div class="testimonial"><img src="person8.jpg"><p>“Trustworthy, reliable, and efficient — EuroVantage changed my life.”</p><h4>Amara 🇳🇬</h4></div>
-    <div class="testimonial"><img src="person9.jpg"><p>“I applied online and within a month I was working in Italy — amazing!”</p><h4>Naomi 🇰🇪</h4></div>
-    <div class="testimonial"><img src="person10.jpg"><p>“They even helped arrange my accommodation in Germany. Top-notch service.”</p><h4>Jonas 🇩🇪</h4></div>
-    <div class="testimonial"><img src="person11.jpg"><p>“Very transparent and supportive team. They care about people.”</p><h4>Aisha 🇳🇬</h4></div>
-    <div class="testimonial"><img src="person12.jpg"><p>“I’m now in Spain with a secure job thanks to EuroVantage’s guidance.”</p><h4>Michael 🇬🇭</h4></div>
+    <div class="testimonial"><img src="images/testimonial-samuel.jpg" alt="Samuel testimonial EuroVantage"><p>“EuroVantage made my job move to Europe so smooth and professional. Highly recommend!”</p><h4>Samuel 🇬🇭</h4></div>
+    <div class="testimonial"><img src="images/testimonial-elena.jpg" alt="Elena testimonial EuroVantage"><p>“Within 3 weeks I got my verified job offer and full visa support. Thank you EuroVantage!”</p><h4>Elena 🇪🇸</h4></div>
+    <div class="testimonial"><img src="images/testimonial-rita.jpg" alt="Rita testimonial EuroVantage"><p>“Thanks to EuroVantage, I’m now a nurse assistant in Germany. Life-changing experience!”</p><h4>Rita 🇩🇪</h4></div>
+    <div class="testimonial"><img src="images/testimonial-kwesi.jpg" alt="Kwesi testimonial EuroVantage"><p>“From interviews to travel, they guided me every step of the way.”</p><h4>Kwesi 🇬🇭</h4></div>
+    <div class="testimonial"><img src="images/testimonial-linda.jpg" alt="Linda testimonial EuroVantage"><p>“Honest agency — they delivered exactly what they promised.”</p><h4>Linda 🇳🇬</h4></div>
+    <div class="testimonial"><img src="images/testimonial-ama.jpg" alt="Ama testimonial EuroVantage"><p>“I got a restaurant job in Italy within one month. Thank you EuroVantage!”</p><h4>Ama 🇮🇹</h4></div>
   </div>
 </section>
+
+<!-- ✅ Floating WhatsApp Button -->
+<a href="https://wa.me/233539121847?text=Hello%20EuroVantage!%20I%27m%20interested%20in%20your%20job%20opportunities." class="whatsapp-float" target="_blank" aria-label="Chat on WhatsApp">
+  <i class="fab fa-whatsapp"></i>
+</a>
+
+<!-- ✅ Font Awesome for WhatsApp Icon -->
+<script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 
 <footer>
   © <script>document.write(new Date().getFullYear())</script> EuroVantage — Accra, Ghana. All rights reserved.
 </footer>
 
 </body>
-</html>
+  </html>
