--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@ footer {
 </a>
 
 <!-- ✅ Font Awesome for WhatsApp Icon -->
-<script src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSP37mMunOgK3A46Rp6oJulC3MJvZUD_tkWtSZY4k3d2w&s=10"anonymous"></script>
+<script src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSP37mMunOgK3A46Rp6oJulC3MJvZUD_tkWtSZY4k3d2w&s=10"></script>
 
 <footer>
   © <script>document.write(new Date().getFullYear())</script> EuroVantage — Accra, Ghana. All rights reserved.
