--- a/index.html
+++ b/index.html
@@ -317,14 +317,13 @@ footer {
   </div>
 </section>
 
-<!-- ✅ Floating WhatsApp Button -->
-<a href="https://wa.me/233539121847?text=Hello%20EuroVantage!%20I%27m%20interested%20in%20your%20job%20opportunities." class="whatsapp-float" target="_blank" aria-label="Chat on WhatsApp">
-  <i class="fab fa-whatsapp"></i>
+<!-- Floating WhatsApp Icon -->
+<a href="https://wa.me/233539121847?text=Hello%20EuroVantage!%20I%27d%20like%20to%20make%20an%20inquiry." 
+   class="whatsapp-float" 
+   target="_blank" 
+   title="Chat with us on WhatsApp">
+   💬
 </a>
-
-<!-- ✅ Font Awesome for WhatsApp Icon -->
-<script src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSP37mMunOgK3A46Rp6oJulC3MJvZUD_tkWtSZY4k3d2w&s=10"></script>
-
 <footer>
   © <script>document.write(new Date().getFullYear())</script> EuroVantage — Accra, Ghana. All rights reserved.
 </footer>
