--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ nav a:hover { color: var(--gold); }
 
 /* Hero */
 .hero {
-  background: url("images/eurovantage-hero.jpg") center/cover no-repeat;
+  background: url("https://pin.it/74jmWnRu2") center/cover no-repeat;
   color: var(--text-light);
   text-align: center;
   padding: 150px 20px;
@@ -282,11 +282,11 @@ footer {
 <section class="team">
   <h3>People We’ve Helped Secure European Jobs</h3>
   <div class="team-grid">
-    <div class="team-member"><img src="images/team-kwame-hotel.jpg" alt="Kwame working as hotel staff in Germany"><h4>Kwame - Hotel Staff</h4></div>
-    <div class="team-member"><img src="images/team-sarah-caregiver.jpg" alt="Sarah working as a caregiver in the UK"><h4>Sarah - Caregiver</h4></div>
-    <div class="team-member"><img src="images/team-lucas-builder.jpg" alt="Lucas working as a construction worker in Italy"><h4>Lucas - Construction Worker</h4></div>
-    <div class="team-member"><img src="images/team-amira-factory.jpg" alt="Amira supervising a factory in Poland"><h4>Amira - Factory Supervisor</h4></div>
-    <div class="team-member"><img src="images/team-david-chef.jpg" alt="David working as a chef assistant in France"><h4>David - Chef Assistant</h4></div>
+    <div class="team-member"><img src="https://pin.it/2ymrPZfLg" alt="Kwame working as hotel staff in Germany"><h4>Kwame - Hotel Staff</h4></div>
+    <div class="team-member"><img src="https://pin.it/57TvU4O0x" alt="Michael working as a caregiver in the UK"><h4>Michael - Caregiver</h4></div>
+    <div class="team-member"><img src="https://pin.it/4NKXmDH3a" alt="Lucas working as a construction worker in Italy"><h4>Lucas - Construction Worker</h4></div>
+    <div class="team-member"><img src="https://pin.it/5TbyXahaY" alt="Amira supervising a factory in Poland"><h4>Amira - Factory Supervisor</h4></div>
+    <div class="team-member"><img src="https://pin.it/1zeu65KP9" alt="David working as a chef assistant in France"><h4>David - Chef Assistant</h4></div>
   </div>
 </section>
 
@@ -308,12 +308,12 @@ footer {
 <section class="testimonials">
   <h3>What Our Clients Say</h3>
   <div class="testimonial-grid">
-    <div class="testimonial"><img src="images/testimonial-samuel.jpg" alt="Samuel testimonial EuroVantage"><p>“EuroVantage made my job move to Europe so smooth and professional. Highly recommend!”</p><h4>Samuel 🇬🇭</h4></div>
-    <div class="testimonial"><img src="images/testimonial-elena.jpg" alt="Elena testimonial EuroVantage"><p>“Within 3 weeks I got my verified job offer and full visa support. Thank you EuroVantage!”</p><h4>Elena 🇪🇸</h4></div>
-    <div class="testimonial"><img src="images/testimonial-rita.jpg" alt="Rita testimonial EuroVantage"><p>“Thanks to EuroVantage, I’m now a nurse assistant in Germany. Life-changing experience!”</p><h4>Rita 🇩🇪</h4></div>
-    <div class="testimonial"><img src="images/testimonial-kwesi.jpg" alt="Kwesi testimonial EuroVantage"><p>“From interviews to travel, they guided me every step of the way.”</p><h4>Kwesi 🇬🇭</h4></div>
-    <div class="testimonial"><img src="images/testimonial-linda.jpg" alt="Linda testimonial EuroVantage"><p>“Honest agency — they delivered exactly what they promised.”</p><h4>Linda 🇳🇬</h4></div>
-    <div class="testimonial"><img src="images/testimonial-ama.jpg" alt="Ama testimonial EuroVantage"><p>“I got a restaurant job in Italy within one month. Thank you EuroVantage!”</p><h4>Ama 🇮🇹</h4></div>
+    <div class="testimonial"><img src="https://pin.it/59a9C8oOE" alt="Samuel testimonial EuroVantage"><p>“EuroVantage made my job move to Europe so smooth and professional. Highly recommend!”</p><h4>Samuel 🇬🇭</h4></div>
+    <div class="testimonial"><img src="https://pin.it/4mJ8KMqrk" alt="Elena testimonial EuroVantage"><p>“Within 3 weeks I got my verified job offer and full visa support. Thank you EuroVantage!”</p><h4>Elena 🇪🇸</h4></div>
+    <div class="testimonial"><img src="https://pin.it/3KQHIB760" alt="Richard testimonial EuroVantage"><p>“Thanks to EuroVantage, I’m now a nurse assistant in Germany. Life-changing experience!”</p><h4>Rita 🇩🇪</h4></div>
+    <div class="testimonial"><img src="https://pin.it/24OifBamT" alt="Kwesi testimonial EuroVantage"><p>“From interviews to travel, they guided me every step of the way.”</p><h4>Kwesi 🇬🇭</h4></div>
+    <div class="testimonial"><img src="https://pin.it/27U9NlbPH" alt="Linda testimonial EuroVantage"><p>“Honest agency — they delivered exactly what they promised.”</p><h4>Linda 🇳🇬</h4></div>
+    <div class="testimonial"><img src="https://pin.it/iUFSmiVFb" alt="Ama testimonial EuroVantage"><p>“I got a restaurant job in Italy within one month. Thank you EuroVantage!”</p><h4>Ama 🇮🇹</h4></div>
   </div>
 </section>
 
