--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@ footer {
 <section class="team">
   <h3>People We’ve Helped Secure European Jobs</h3>
   <div class="team-grid">
-    <div class="team-member"><img src="https://pin.it/2ymrPZfLg" alt="Kwame working as hotel staff in Germany"><h4>Kwame - Hotel Staff</h4></div>
+    <div class="team-member"><img src="https://i.pinimg.com/736x/a4/1d/f7/a41df7e7a22c6653bf3f75da1a0207e0.jpg" alt="Kwame working as hotel staff in Germany"><h4>Kwame - Hotel Staff</h4></div>
     <div class="team-member"><img src="https://pin.it/57TvU4O0x" alt="Michael working as a caregiver in the UK"><h4>Michael - Caregiver</h4></div>
     <div class="team-member"><img src="https://pin.it/4NKXmDH3a" alt="Lucas working as a construction worker in Italy"><h4>Lucas - Construction Worker</h4></div>
     <div class="team-member"><img src="https://pin.it/5TbyXahaY" alt="Amira supervising a factory in Poland"><h4>Amira - Factory Supervisor</h4></div>
