--- a/index.html
+++ b/index.html
@@ -294,15 +294,89 @@ footer {
 <section class="jobs">
   <h3>Popular Job Categories</h3>
   <div class="job-grid">
-    <div class="job-card">🍴 Caterers</div>
-    <div class="job-card">🍹 Bar Staff</div>
-    <div class="job-card">🏭 Factory Workers</div>
-    <div class="job-card">🌾 Farmers</div>
-    <div class="job-card">🚧 Plumbers</div>
-    <div class="job-card">🏗️ Constructors</div>
-    <div class="job-card">🚗 Drivers</div>
+
+    <div class="job-card">
+      <img src="https://i.pinimg.com/736x/41/b7/d3/41b7d38d90268e7a4c6e3c4bbd815c2c.jpg" alt="Caterers" class="job-img">
+      <p>🍴 Caterers</p>
+    </div>
+
+    <div class="job-card">
+      <img src="https://i.pinimg.com/736x/aa/8e/52/aa8e52021b43f8f7d39528b3a0b4a0f3.jpg" alt="Bar Staff" class="job-img">
+      <p>🍹 Bar Staff</p>
+    </div>
+
+    <div class="job-card">
+      <img src="https://i.pinimg.com/736x/87/9e/46/879e46a158c27c3f86dd5f991f8262de.jpg" alt="Factory Workers" class="job-img">
+      <p>🏭 Factory Workers</p>
+    </div>
+
+    <div class="job-card">
+      <img src="https://i.pinimg.com/736x/20/63/4b/20634b5100c57c3b449f9d8e7683518d.jpg" alt="Farmers" class="job-img">
+      <p>🌾 Farmers</p>
+    </div>
+
+    <div class="job-card">
+      <img src="https://i.pinimg.com/736x/5f/a7/34/5fa734ae2df2e2b4a7c016fbc0533e41.jpg" alt="Plumbers" class="job-img">
+      <p>🚧 Plumbers</p>
+    </div>
+
+    <div class="job-card">
+      <img src="https://i.pinimg.com/736x/65/ea/61/65ea6112b8037f6847b4eac4f260582a.jpg" alt="Constructors" class="job-img">
+      <p>🏗️ Constructors</p>
+    </div>
+
+    <div class="job-card">
+      <img src="https://i.pinimg.com/736x/ee/12/32/ee123205b8b01e86c6769a9175ffea9e.jpg" alt="Drivers" class="job-img">
+      <p>🚗 Drivers</p>
+    </div>
+
   </div>
 </section>
+
+<!-- ✅ Styling for job section -->
+<style>
+.jobs {
+  text-align: center;
+  padding: 60px 20px;
+  background: #f9f9f9;
+}
+
+.jobs h3 {
+  font-size: 28px;
+  margin-bottom: 30px;
+  color: #222;
+}
+
+.job-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
+  gap: 25px;
+  justify-items: center;
+}
+
+.job-card {
+  background: white;
+  border-radius: 16px;
+  box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+  padding: 15px;
+  width: 100%;
+  max-width: 200px;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.job-card:hover {
+  transform: translateY(-5px);
+  box-shadow: 0 6px 14px rgba(0,0,0,0.15);
+}
+
+.job-img {
+  width: 100%;
+  height: 130px;
+  object-fit: cover;
+  border-radius: 12px;
+  margin-bottom: 10px;
+}
+</style>
 
 <!-- ✅ Testimonials -->
 <section class="testimonials">
