--- a/factory-workers.html
+++ b/factory-workers.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Farmers — EuroVantage Jobs</title>
+<title>Factory Workers — EuroVantage Jobs</title>
 <style>
 body {font-family:"Poppins",sans-serif;background:#f9f9f9;text-align:center;padding:40px;}
 img {width:90%;max-width:500px;border-radius:15px;box-shadow:0 5px 15px rgba(0,0,0,0.2);}
@@ -11,9 +11,9 @@ a {display:inline-block;margin-top:25px;padding:10px 20px;background:#d4af37;col
 </style>
 </head>
 <body>
-<h2>🌾 Farmers</h2>
-<img src="https://i.pinimg.com/736x/3b/8c/73/3b8c73af2497b8dbacb98175b84a3a84.jpg" alt="Farm Workers">
-<p>Join eco-friendly farms across Europe cultivating crops, fruits, and vegetables with sustainable farming methods.</p>
+<h2>🏭 Factory Workers</h2>
+<img src="https://i.pinimg.com/736x/d0/3a/7a/d03a7a0ef4686126a68992c7b2c39bfb.jpg" alt="Factory Workers">
+<p>Secure reliable manufacturing positions in clean, modern European factories with steady income and growth opportunities.</p>
 <a href="index.html">← Back to Jobs</a>
 </body>
 </html>
